--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 
 # Thêm logo đúng size vào đúng chỗ sẽ hiển thị phía trước tiêu đề trang web
 # logo: "/assets/images/88x88.png" 
-title: "Thành Nguyễn Blog"
+title: "Blog của Thành"
 email: thanhag@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
