--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,10 @@
 # in the templates via {{ site.myvariable }}.
 
 
+locale: "vi-VN"
 # Thêm logo đúng size vào đúng chỗ sẽ hiển thị phía trước tiêu đề trang web
 # logo: "/assets/images/88x88.png" 
+
 title: "Blog của Thành"
 email: thanhag@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
