--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,9 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://sofsog.com"
+    - label: "Facebook"
+      icon: "fab fa-fw fa-facebook"
+      url: "https://facebook.com/rambothanh"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/rambothanh"
