--- a/_config.yml
+++ b/_config.yml
@@ -69,10 +69,8 @@ author:
   name   : "Thành"
   avatar : "/assets/images/avarta-thanh.jpg"
   bio    : "Là một gã ít nói nhàm chán, chuyên về tài chính, thích mày mò công nghệ. Xem thêm tiểu sử của tôi qua facebook"
+  location: "An Giang, Việt Nam"
   links:
-    - label: "An Giang, Việt Nam"
-      icon: "fas fa-fw fa-map-marker-alt"
-
     - label: "Trang web"
       icon: "fas fa-fw fa-link"
       url: "https://sofsog.com"
