--- a/_config.yml
+++ b/_config.yml
@@ -137,3 +137,14 @@ analytics:
   google:
     tracking_id: "G-VKX8JLF0QG"
     anonymize_ip: false # default
+
+
+# _config.yml (defaults)
+repository  : thanhag/thanhag.github.io # Git username/repo-name e.g. "mmistakes/minimal-mistakes"
+comments:
+  provider  : "staticman_v2"
+  staticman:
+    branch    : "master"
+    endpoint  : http://95.179.130.240/v3/entry/github/
+
+    # http://95.179.130.240/v3/connect/thanhag/thanhag.github.io
