--- a/_config.yml
+++ b/_config.yml
@@ -140,11 +140,13 @@ analytics:
 
 
 # _config.yml (defaults)
-repository  : thanhag/thanhag.github.io # Git username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository  : "thanhag/thanhag.github.io" # Git username/repo-name e.g. "mmistakes/minimal-mistakes"
 comments:
   provider  : "staticman_v2"
   staticman:
     branch    : "master"
-    endpoint  : http://95.179.130.240/v3/entry/github/
+    # endpoint  : http://95.179.130.240/v3/entry/github/
 
     # http://95.179.130.240/v3/connect/thanhag/thanhag.github.io
+
+
