--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,8 @@ plugins:
 
 author:
   name   : "Thành"
-  avatar : /assets/images/main/Thanh-Avarta.png
+  avatar : /assets/images/main/thanh-avarta-dumaudep-fromSVG.png # ảnh trắng đen chuyển từ SVG cho nhẹ
+  # /assets/images/main/Thanh-Avarta.png # Ảnh đủ màu
   
   #"/assets/images/avarta-thanh.jpg"
   bio    : "Là một gã ít nói nhàm chán, chuyên về tài chính, thích mày mò công nghệ. Xem thêm tiểu sử của tôi qua facebook"
