--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
-  - title: "Điều khoản và Chính sách bảo mật"
+  - title: "Terms" # "Điều khoản và Chính sách bảo mật" # Chữ việt dài quá nhìn rối mắt
     url: /terms/  
