--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,8 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
-
+  - jekyll-archives  # Thêm chỗ này
+  
 # Site Author
 author:
   name          : "Thành"
@@ -135,12 +136,35 @@ defaults:
       layout: single
       author_profile: true
 
+
+# Cấu hình jekyll-archives
 category_archive:
-  type: liquid
-  path: /categories/
+  type: jekyll-archives
+  path: /
 tag_archive:
-  type: liquid
-  path: /tags/
+  type: jekyll-archives
+  path: /
+# https://github.com/jekyll/jekyll-archives
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive-taxonomy
+    tag: archive-taxonomy
+  permalinks:
+    category: /:name/
+    tag: /:name/
+# End Cấu hình jekyll-archives
+
+
+# Cấu hình gốc, đã thay bằng bên trên
+# category_archive:
+#   type: liquid
+#   path: /categories/
+# tag_archive:
+#   type: liquid
+#   path: /tags/
 
 analytics:
   provider: "google-gtag"
