--- a/_config.yml
+++ b/_config.yml
@@ -73,8 +73,8 @@ plugins:
 # Site Author
 author:
   name          : "Thành"
-  avatar        : /assets/images/main/thanh-avarta-dumaudep-vintage.png # ẢNH HIỆU ỨNG VINTAGE
-                #/assets/images/main/thanh-avarta-dumaudep-fromSVG.png # ảnh trắng đen chuyển từ SVG cho nhẹ
+  avatar        : /assets/images/main/thanh-avarta-dumaudep-fromSVG.png # ảnh trắng đen chuyển từ SVG cho nhẹ
+                # /assets/images/main/thanh-avarta-dumaudep-fromSVG.png # ảnh trắng đen chuyển từ SVG cho nhẹ
                 # /assets/images/main/Thanh-Avarta.png # Ảnh đủ màu  
                 #"/assets/images/avarta-thanh.jpg"
                 # /assets/images/main/thanh-avarta-dumaudep-vintage.png # ẢNH HIỆU ỨNG VINTAGE
