--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,7 @@ comments:
   provider  : "staticman_v2"
   staticman:
     branch    : "master"
-    endpoint  : https://staticman.sofsog.com/v3/entry/github/
+    endpoint  : https://staticman.sofsog.com/v2/entry/
 
 #     # http://95.179.130.240/v3/connect/thanhag/thanhag.github.io
 #     # https://staticman.sofsog.com/v3/connect/thanhag/thanhag.github.io
