--- a/staticman.yml
+++ b/staticman.yml
@@ -17,7 +17,9 @@ comments:
   # When allowedOrigins is defined, only requests sent from one of the domains
   # listed will be accepted. The origin is sent as part as the `options` object
   # (e.g. <input name="options[origin]" value="http://yourdomain.com/post1")
-  allowedOrigins: ["sofsog.com"]
+ allowedOrigins:
+    - sofsog.com # Thay bằng tên miền trang blog của bạn
+    - https://playful-brigadeiros-7fc317.netlify.app/
 
   # (*) REQUIRED
   #
