--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ repository: "thanhag/thanhag.github.io" # Git username/repo-name e.g. "mmistakes
 comments:
   provider: "staticman_v2"
   staticman:
-    branch: "master"
+    branch: "netlify"
     endpoint: https://staticman.sofsog.com/v2/entry/
 #     # http://95.179.130.240/v3/connect/thanhag/thanhag.github.io
 #     # https://staticman.sofsog.com/v3/connect/thanhag/thanhag.github.io
